--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
             <a class="extra" href="/gameboy">gameboy</a>
+            <a class="extra" href="/guide">guide</a>
           </div>
 
           {{ content }}
