change instances of Gamefolk to GameFolk add GameFolk LLC copyright notice

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Gamefolk<br />
+                Copyright © 2013 GameFolk LLC<br />
                 contact@gamefolk.org
               </p>
             </div>
